Use audio player and the Office Editing apps as the init default task.

We have several component extension as the initial default app, which
means set to default before user explicitly changes default app.
Audio player and the "Office Editing for Docs, Sheets & Slides" app
were not included in that list despite these are also components.

Bug: 810986
Test: unit_tests --gtest_filter=FileManagerFileTasksTest.*
Test: manually verified Office Editing shown as default

Change-Id: I1ee20773714ecda50fbe3d17f8cda1c0bb72fd96
Reviewed-on: https://chromium-review.googlesource.com/920124
Reviewed-by: Naoki Fukino <fukino@chromium.org>
Commit-Queue: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537247}
Former-commit-id: b5d0b2f01bf6fc4abb7990aa434f02a10fa9d3ac